--- a/fe/src/components/sideBar/Navbar.css
+++ b/fe/src/components/sideBar/Navbar.css
@@ -1,15 +1,20 @@
 .navbar {
   background-color: #91170f;
-  height: 80px;
   display: flex;
   justify-content: start;
   align-items: center;
 }
 
 .menu-bars {
-  margin-left: 0.5rem;
-  font-size: 2rem;
+  margin-left: 2rem;
+  font-size: 1.6em;
   background: none;
+  position: relative;
+  top: -3px;
+}
+
+.menu-bars svg {
+  color: #fff;
 }
 
 .nav-menu {
@@ -22,6 +27,7 @@
   top: 0;
   left: -100%;
   transition: 850ms;
+  z-index: 90;
 }
 
 .nav-menu.active {
@@ -33,7 +39,6 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 16px 0px 90px 16px;
   list-style: none;
   height: 60px;
 }
@@ -41,21 +46,41 @@
 .nav-text a {
   text-decoration: none;
   color: #f5f5f5;
-  font-size: 18px;
+  font-size: 1em;
   width: 95%;
   height: 100%;
   display: flex;
-  align-items: center;
+  text-align: left;
   padding: 0 16px;
   border-radius: 4px;
 }
 
+.nav-text span {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.nav-text svg {
+  width: 40px;
+  height: 40px;
+}
+
+.nav-icon {
+  width: 2em;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .nav-text a:hover {
-  background-color: #ecf1f8;
+  background-color: #5c110b;
 }
 
 .nav-menu-items {
   width: 100%;
+  padding: 0;
 }
 
 .navbar-toggle {
@@ -69,4 +94,75 @@
 
 span {
   margin-left: 16px;
+}
+
+.navbar .logo {
+  margin-left: 2em;
+}
+
+.navbar .logo a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 0.8em;
+  font-weight: bold;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+
+.nav-right {
+  position: absolute;
+  right: 2em;
+  top: 0;
+  height: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  cursor: pointer;
+}
+
+.nav-right ul {
+  list-style: none;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-right ul li {
+  margin-left: 1em;
+}
+
+.nav-right .button {
+  background-color: #91170f;
+  color: #f5f5f5;
+  border: 1px solid #f5f5f5;
+  height: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 16px;
+  font-weight: bold;
+  font-size: 0.9em;
+  border-radius: 2px;
+}
+
+.nav-right .button:hover {
+  background-color: #f5f5f5;
+  color: #91170f;
+}
+
+.modal-bg {
+  z-index: 30;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-container {
+  z-index: 100;
+  position: relative;
 }
