--- a/fe/src/components/panZoom/styles.css
+++ b/fe/src/components/panZoom/styles.css
@@ -1,7 +1,8 @@
 .box {
-    border: 1px dashed #000;
-    height: 500px;
-    width: 800px;
+  width: 100%;
+  height: calc(100%);
+  position: absolute;
+  left: 0;
   }
   
   .circle {
