--- a/fe/src/util/colors.scss
+++ b/fe/src/util/colors.scss
@@ -28,4 +28,9 @@
   --hover-color: #d3d3d3;
 
   --blackish: #1f1f1f;
+
+  --navbar: #c0392b;
+  --sidebar: #e74c3c;
+  --yellow: #f6b93b;
+  --blue: #2980b9;
 }
