--- a/fe/src/pages/map/map.scss
+++ b/fe/src/pages/map/map.scss
@@ -6,9 +6,7 @@
   position: absolute;
   left: 0;
   overflow: scroll;
-  margin-top: 100px;
-  margin-left: 20px;
-
+  margin-top: 4em;
 }
 
 .map-container table {
