--- a/fe/src/components/navbar/Navbar.scss
+++ b/fe/src/components/navbar/Navbar.scss
@@ -112,4 +112,14 @@
 .modal-container {
   z-index: 100;
   position: relative;
+  top: -3em;
+}
+
+.modal-dialog {
+  max-height: 35em;
+  overflow-y: scroll;
+}
+
+.color-black p {
+  color: #000;
 }
