--- a/fe/src/util/colors.scss
+++ b/fe/src/util/colors.scss
@@ -29,7 +29,7 @@
 
   --blackish: #1f1f1f;
 
-  --navbar: #2b5fc0;
+  --navbar: #c0392b;
   --sidebar: #e74c3c;
   --yellow: #f6b93b;
   --blue: #2980b9;
